// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery DOM Structure renders correctly 1`] = `
<div
  class="widget-gallery"
  data-focusindex="0"
>
  <div
    class="widget-gallery-filter"
  />
  <div
    class="widget-gallery-items widget-gallery-lg-4 widget-gallery-md-3 widget-gallery-sm-2 infinite-loading"
  >
    <div
      class="widget-gallery-item"
    >
      11
    </div>
    <div
      class="widget-gallery-item"
    >
      22
    </div>
    <div
      class="widget-gallery-item"
    >
      33
    </div>
  </div>
</div>
`;

exports[`Gallery DOM Structure renders correctly with onclick event 1`] = `
<div
  class="widget-gallery"
  data-focusindex="0"
>
  <div
    class="widget-gallery-filter"
  />
  <div
    class="widget-gallery-items widget-gallery-lg-4 widget-gallery-md-3 widget-gallery-sm-2 infinite-loading"
  >
    <div
      class="widget-gallery-item widget-gallery-clickable"
      role="button"
      tabindex="0"
    >
      11
    </div>
    <div
      class="widget-gallery-item widget-gallery-clickable"
      role="button"
      tabindex="0"
    >
      22
    </div>
    <div
      class="widget-gallery-item widget-gallery-clickable"
      role="button"
      tabindex="0"
    >
      33
    </div>
  </div>
</div>
`;

exports[`Gallery with empty option renders correctly 1`] = `
<div
  class="widget-gallery"
  data-focusindex="0"
>
  <div
    class="widget-gallery-filter"
  />
  <div
    class="widget-gallery-empty"
  >
    <div
      class="empty-placeholder"
    >
      <span>
        No items found
      </span>
    </div>
  </div>
</div>
`;

exports[`Gallery with pagination renders correctly 1`] = `
<div
  class="widget-gallery"
  data-focusindex="0"
>
  <div
    class="widget-gallery-pagination"
  >
    <div
      class="pagination-bar"
    >
      <button
        class="btn pagination-button"
        disabled=""
      >
        <span
          class="glyphicon glyphicon-step-backward"
        />
      </button>
      <button
        class="btn pagination-button"
        disabled=""
      >
        <span
          class="glyphicon glyphicon-backward"
        />
      </button>
      <div
        class="paging-status"
      >
        1 to 10 of 20
      </div>
      <button
        class="btn pagination-button"
      >
        <span
          class="glyphicon glyphicon-forward"
        />
      </button>
      <button
        class="btn pagination-button"
      >
        <span
          class="glyphicon glyphicon-step-forward"
        />
      </button>
    </div>
  </div>
  <div
    class="widget-gallery-filter"
  />
  <div
    class="widget-gallery-items widget-gallery-lg-4 widget-gallery-md-3 widget-gallery-sm-2"
  >
    <div
      class="widget-gallery-item"
    >
      11
    </div>
    <div
      class="widget-gallery-item"
    >
      22
    </div>
    <div
      class="widget-gallery-item"
    >
      33
    </div>
  </div>
</div>
`;
